--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -21,12 +21,12 @@
       <nav id="tags">
         <a href="/index.html" id="avatar" style="background:url({{site.avatar}});background-size:100px 100px;"></a>
 
-        <ul id="tags__ul">
+        <!-- <ul id="tags__ul">
           <li id="js-label1" class="tags__li tags-btn active">所有文章 <span class="post_count"></span></li>
           {% for category in site.categories %}
             <li id="js-label{{forloop.index | plus:1 }}" class="tags__li tags-btn">{{ category | first }}<span class="post_count"></span></li>
           {% endfor %}
-        </ul>
+        </ul> -->
 
         <div id="tags__bottom">
           <a href="mailto:{{ site.email }}" id="icon-email" class="tags-btn fontello"></a>
