--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,21 +48,22 @@
         </nav>
       </div> <!-- end #posts-list -->
     </aside> <!-- end #sidebar -->
-    <div id="post__toc">
+    <!-- <div id="post__toc">
       <span id="post__toc-title">目录</span>
       <ul id="post__toc-ul"></ul>
     </div>
     <div id="post">
       <div id="pjax">
         {{ content }}
-      </div> <!-- end #pjax -->
-<!-- 
+      </div>  -->
+      <!-- end #pjax -->
+
       <div id="post__toc-trigger">
         <div id="post__toc">
           <span id="post__toc-title">目录</span>
           <ul id="post__toc-ul"></ul>
         </div>
-      </div> -->
+      </div>
     </div> <!-- end #post -->
 
     <button id="js-fullscreen"><span id="icon-arrow" class="fontello"></span></button>
