--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -38,7 +38,7 @@
         <form action="" id="search-form">
           <a href="/index.html" id="mobile-avatar" style="background:url({{site.avatar}});background-size:50px 50px;"></a>
           <!-- NOTE: input field is disabled by default -->
-          <input id="search-input" type="text" placeholder="Search..." disabled >
+          <input id="search-input" type="text" placeholder="Search..."  >
         </form>
 
         <nav id="pl__container">
