--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -36,9 +36,8 @@
 
       <div id="posts-list">
         <form action="" id="search-form">
-          <a href="/index.html" id="mobile-avatar" style="background:url({{site.avatar}});background-size:50px 50px;"></a>
-          <!-- NOTE: input field is disabled by default -->
-          <input id="search-input" type="text" placeholder="Search..."  >
+          <a href="/index.html" id="mobile-avatar" style="background:url({{site.avatar}});background-size:50px 50px;"></a> 
+          <input id="search-input" type="text" placeholder="Search..." enable >
         </form>
 
         <nav id="pl__container">
