--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,10 +35,10 @@
       </nav> <!-- end #tags -->
 
       <div id="posts-list">
-        <form action="" id="search-form">
+        <!-- <form action="" id="search-form">
           <a href="/index.html" id="mobile-avatar" style="background:url({{site.avatar}});background-size:50px 50px;"></a> 
           <input id="search-input" type="text" placeholder="Search..." enable >
-        </form>
+        </form> -->
 
         <nav id="pl__container">
         {% for post in site.posts %}
