--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ iframe {
 #post__toc {
   width: 260px;
   /* max-height: 500px; */
-  max-height: 100%;
+  max-height: 1000px;
   padding-top: 20px;
   background: rgba(250, 250, 250, 0.9);
   border: 1px solid #e5e8ec;
