--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ a {
 #tags {
   width: 135px;
   height: 100%;
-  background: #474d57;
+  background: #1f6cf1;
   border-right: 1px solid #3c4149;
   box-shadow: inset -15px 0 15px -15px #222;
   float: left;
@@ -214,7 +214,7 @@ a {
    Posts List
 \*---------------------------------*/
 #posts-list {
-  width: 220px;
+  width: 200px;
   height: 100%;
   background: rgba(250, 250, 250, 0.95);
   border-right: 1px solid #e5e8ec;
