--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ a {
 #tags {
   width: 135px;
   height: 100%;
-  background: #1f6cf1;
+  background: #474d57;
   border-right: 1px solid #3c4149;
   box-shadow: inset -15px 0 15px -15px #222;
   float: left;
