--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,7 @@
   <body>
     <aside id="sidebar">
       <nav id="tags">
-        <a href="/index.html" id="avatar" style="background:url({{site.avatar}});background-size:100px 100px;"></a>
+        <a href="/index.html" id="avatar" style="background:url(http://www.wangbokun.com/assets/public/touxiang.png);background-size:100px 100px;"></a>
 
         <ul id="tags__ul">
           <li id="js-label1" class="tags__li tags-btn active">所有文章 <span class="post_count"></span></li>
