--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -99,7 +99,7 @@
       })();
     </script>
     <!--百度统计-->
-    <script>
+    <!-- <script>
     var _hmt = _hmt || [];
     (function() {
       var hm = document.createElement("script");
@@ -107,7 +107,7 @@
       var s = document.getElementsByTagName("script")[0]; 
       s.parentNode.insertBefore(hm, s);
     })();
-    </script>
+    </script> -->
 
   </body>
 </html>
