--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,9 @@
     
   </head>
   <body>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+    <script type="text/javascript" src="http://www.wangbokun.com/assets/js/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
     <aside id="sidebar">
       <nav id="tags">
         <a href="/index.html" id="avatar" style="background:url(http://www.wangbokun.com/assets/public/touxiang.png);background-size:100px 100px;"></a>
