--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -86,7 +86,7 @@
     </script>
     <script src="/assets/js/script.js"></script>
     <!--评论框-->
-    <script>
+    <!-- <script>
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = '{{ site.disqus }}';
       var disqus_identifier = '{{ page.id }}-{{ page.title }}';
@@ -99,7 +99,7 @@
           dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
-    </script>
+    </script> -->
     <!--百度统计-->
     <!-- <script>
     var _hmt = _hmt || [];
