--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-    <script type="text/javascript" src="http://www.wangbokun.com/assets/js/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <!-- <script type="text/javascript" src="http://www.wangbokun.com/assets/js/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
 
     <aside id="sidebar">
       <nav id="tags">
@@ -110,6 +110,6 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script> -->
-
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 </html>
