--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,11 +33,12 @@
           {% endfor %}
         </ul>
 
-        <div id="tags__bottom">
+        <!-- <div id="tags__bottom">
           <a href="mailto:{{ site.email }}" id="icon-email" class="tags-btn fontello"></a>
           <a href="/rss.xml" id="icon-feed" class="tags-btn fontello"></a>
         </div>
-      </nav> <!-- end #tags -->
+      </nav>  -->
+      <!-- end #tags -->
 
       <div id="posts-list">
         <!-- <form action="" id="search-form">
