--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -36,8 +36,8 @@
         <!-- <div id="tags__bottom">
           <a href="mailto:{{ site.email }}" id="icon-email" class="tags-btn fontello"></a>
           <a href="/rss.xml" id="icon-feed" class="tags-btn fontello"></a>
-        </div>
-      </nav>  -->
+        </div> -->
+      </nav> 
       <!-- end #tags -->
 
       <div id="posts-list">
@@ -49,7 +49,7 @@
         <nav id="pl__container">
         {% for post in site.posts %}
           <!-- <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span><span class="pl__date">{{ post.date | date: "%b %Y" }}</span></a> -->
-          <a class="{{ post.categories }} pl__all" href="{{ post.url }}" ><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a>
+          <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a>
         {% endfor %}
         </nav>
       </div> <!-- end #posts-list -->
