--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight.base.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight.theme/{{ site.highlight-theme }}.css">
     <!--latex公式-->
-    
+    <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </head>
   <body>
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
@@ -112,7 +112,7 @@
     })();
     </script> -->
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-    <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <!-- <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
 
   </body>
 </html>
