--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,7 +48,9 @@
         <nav id="pl__container">
         {% for post in site.posts %}
           <!-- <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span><span class="pl__date">{{ post.date | date: "%b %Y" }}</span></a> -->
-          <a class="{{ post.categories }} pl__all" href="http://www.wangbokun.com{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a>
+          <!-- <a class="{{ post.categories }} pl__all" href="http://www.wangbokun.com{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a> -->
+          <a class="{{ post.categories }} pl__all" href="http://www.baidu.com"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a>
+
         {% endfor %}
         </nav>
       </div> <!-- end #posts-list -->
@@ -111,8 +113,6 @@
     })();
     </script> -->
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-    <!-- <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-
+    <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
-  <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </html>
