--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -49,7 +49,7 @@
         {% for post in site.posts %}
           <!-- <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span><span class="pl__date">{{ post.date | date: "%b %Y" }}</span></a> -->
           <!-- <a class="{{ post.categories }} pl__all" href="http://www.wangbokun.com{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a> -->
-          <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a>
+          <a class="{{ post.categories }} pl__all" href="#{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span></a>
 
         {% endfor %}
         </nav>
