--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -87,7 +87,7 @@
     </script>
     <script src="/assets/js/script.js"></script>
     <!--评论框-->
-    <!-- <script>
+    <script>
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = '{{ site.disqus }}';
       var disqus_identifier = '{{ page.id }}-{{ page.title }}';
@@ -100,9 +100,9 @@
           dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
-    </script> -->
+    </script>
     <!--百度统计-->
-    <!-- <script>
+    <script>
     var _hmt = _hmt || [];
     (function() {
       var hm = document.createElement("script");
@@ -110,6 +110,6 @@
       var s = document.getElementsByTagName("script")[0]; 
       s.parentNode.insertBefore(hm, s);
     })();
-    </script> -->
+    </script>
    </body>
 </html>
