add google adsense

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,8 +14,14 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight.base.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight.theme/{{ site.highlight-theme }}.css">
-    <!--latex公式-->
-    
+    <!--google adsense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-8123536507880819",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
@@ -72,8 +78,9 @@
 
     <button id="js-fullscreen"><span id="icon-arrow" class="fontello"></span></button>
     <button id="js-toc"><span id="icon-list" class="fa fa-list-ul"></span></button>
-    <!--jquery-->
+    <!--latex公式-->
     <script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <!--jquery-->
     <script src="/assets/js/jquery-2.0.3.min.js"></script>
     <script src="/assets/js/jquery.pjax.js"></script>
     <script src="/assets/js/nprogress.js"></script>
