--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,6 +22,9 @@
         enable_page_level_ads: true
       });
     </script>
+     <!--gitalk-->
+    <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+    <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   </head>
   <body>
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
@@ -94,7 +97,22 @@
     </script>
     <script src="/assets/js/script.js"></script>
     <!--评论框-->
+    <div id='gitalk-container'></div>
+
     <script>
+      const gitalk = new Gitalk({
+        clientID: '3cbf7a3ec2f0319740fe',
+        clientSecret: 'a1ce5df248eb1933de70742778b94eccdc485727',
+        repo: 'wangbokun.github.io',
+        owner: 'bokun.wang',
+        admin: ['bokun.wang'],
+        id: location.pathname,      // Ensure uniqueness and length less than 50
+        distractionFreeMode: false  // Facebook-like distraction free mode
+      })
+      
+      gitalk.render('gitalk-container')
+      </script>
+    <!-- <script>
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = '{{ site.disqus }}';
       var disqus_identifier = '{{ page.id }}-{{ page.title }}';
@@ -107,7 +125,7 @@
           dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
-    </script>
+    </script> -->
     <!--百度统计-->
     <script>
     var _hmt = _hmt || [];
