--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -77,6 +77,8 @@
           <ul id="post__toc-ul"></ul>
         </div>
       </div> -->
+      <!--评论框-->
+      <div id='gitalk-container'></div>
     </div> <!-- end #post -->
 
     <button id="js-fullscreen"><span id="icon-arrow" class="fontello"></span></button>
@@ -96,9 +98,7 @@
         {% endfor %}
     </script>
     <script src="/assets/js/script.js"></script>
-    <!--评论框-->
-    <div id='gitalk-container'></div>
-
+    <!--评论框js-->
     <script>
       const gitalk = new Gitalk({
         clientID: '3cbf7a3ec2f0319740fe',
