--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -101,8 +101,8 @@
     <!--评论框js-->
     <script>
       const gitalk = new Gitalk({
-        clientID: '3cbf7a3ec2f0319740fe',
-        clientSecret: 'a1ce5df248eb1933de70742778b94eccdc485727',
+        client_id: '3cbf7a3ec2f0319740fe',
+        client_secret: 'a1ce5df248eb1933de70742778b94eccdc485727',
         repo: 'wangbokun.github.io',
         owner: 'bokun.wang',
         admin: ['bokun.wang'],
