--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -103,7 +103,7 @@
       const gitalk = new Gitalk({
         client_id: '3cbf7a3ec2f0319740fe',
         client_secret: 'a1ce5df248eb1933de70742778b94eccdc485727',
-        repo: 'wangbokun.github.io',
+        repo: 'gitalk',
         owner: 'bokun.wang',
         admin: ['bokun.wang'],
         id: location.pathname,      // Ensure uniqueness and length less than 50
