--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -105,8 +105,8 @@
         client_secret: 'a1ce5df248eb1933de70742778b94eccdc485727',
         // labels: "['Gitalk']",
         repo: 'gitalk',
-        owner: 'bokun.wang',
-        admin: ['bokun.wang'],
+        owner: 'wangbokun',
+        admin: ['wangbokun'],
         id: location.pathname,      // Ensure uniqueness and length less than 50
         distractionFreeMode: false  // Facebook-like distraction free mode
       })
