--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -113,7 +113,7 @@
           id: md5(location.pathname),
           perPage: 15,
           pagerDirection: 'last',
-          createIssueManually: true,
+          createIssueManually: false,
           distractionFreeMode: false
         })
 
