--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight.base.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/highlight.theme/{{ site.highlight-theme }}.css">
     <!--google adsense-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-8123536507880819",
         enable_page_level_ads: true
       });
-    </script>
+    </script>     -->
   </head>
   <body>
     <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
@@ -95,9 +95,17 @@
         {% endfor %}
     </script>
     <script src="/assets/js/script.js"></script>
-    <!--评论框js-->
 
-    <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+      <!--google adsense-->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-8123536507880819",
+          enable_page_level_ads: true
+        });
+      </script>  
+    <!--评论框js-->
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <script src='https://d33wubrfki0l68.cloudfront.net/js/2d2a6042373e3318e47edf63c7d9a322e4f27db3/js/src/md5.min.js'></script>
